--- a/src/index.html
+++ b/src/index.html
@@ -238,7 +238,7 @@
 						<div class="content">
 							<!--breadcrumbs-->
 							<div class="breadcrumbs">
-								<ul class="breadcrumbs-list">
+								<ul class="breadcrumbs__list">
 									<li><a href="#">Главная</a></li>
 									<li><a href="#">Категории</a></li>
 									<li>Подкатегории</li>
