--- a/src/typography.html
+++ b/src/typography.html
@@ -238,7 +238,7 @@
 						<div class="content">
 							<!--breadcrumbs-->
 							<div class="breadcrumbs">
-								<ul class="breadcrumbs-list">
+								<ul class="breadcrumbs__list">
 									<li><a href="#">Главная</a></li>
 									<li><a href="#">Категории</a></li>
 									<li>Подкатегории</li>
@@ -398,7 +398,7 @@
 							<h3>
 								<span class="mark">Таблица стилизованная</span>
 							</h3>
-							<div class="table_auto">
+							<div class="table-auto">
 								<table class="tbl">
 									<thead>
 										<tr>
@@ -465,7 +465,7 @@
 								<span class="mark">Таблица без стилей</span>
 							</h3>
 							<!--default table-->
-							<div class="table_auto">
+							<div class="table-auto">
 								<table border="1">
 									<thead>
 										<tr>
@@ -656,7 +656,7 @@
 											<span class="mark">Checkbox outside label</span>
 										</h3>
 
-										<ul class="checkbox-list">
+										<ul class="checkbox-list list-reset">
 											<li>
 												<input type="checkbox" name="checkbox-normal" id="checkbox-normal" />
 												<label for="checkbox-normal"><span>Normal</span></label>
@@ -678,7 +678,7 @@
 										<h3>
 											<span class="mark">Checkbox inside label</span>
 										</h3>
-										<ul class="checkbox-list">
+										<ul class="checkbox-list list-reset">
 											<li>
 												<label class="check-label">
 												<input type="checkbox" name="checkbox-normal" />
@@ -710,7 +710,7 @@
 											<span class="mark">Radiobutton outside label</span>
 										</h3>
 
-										<ul class="radio-list">
+										<ul class="radio-list list-reset">
 											<li>
 												<input type="radio" name="testRadioOutside" id="radio-male" checked />
 												<label for="radio-male"><span>Male</span></label>
@@ -732,7 +732,7 @@
 										<h3>
 											<span class="mark">Radiobutton inside label</span>
 										</h3>
-										<ul class="radio-list">
+										<ul class="radio-list list-reset">
 											<li>
 												<label class="radio-label">
 												<input type="radio" name="testRadioInside" />
