--- a/src/__index.html
+++ b/src/__index.html
@@ -14,7 +14,7 @@
 			<div class="main__holder">
 				<!--CONTENT-->
 				<div class="content-wrap">
-					<div class="content">
+					<div class="content user-content">
 						<!--breadcrumbs-->
 						@@include('_breadcrumbs.tpl')
 						<!--breadcrumbs end-->
