--- a/src/__typography.html
+++ b/src/__typography.html
@@ -14,7 +14,7 @@
 			<div class="main__holder">
 				<!--CONTENT-->
 				<div class="content-wrap">
-					<div class="content">
+					<div class="content user-content">
 						<!--breadcrumbs-->
 						@@include('_breadcrumbs.tpl')
 						<!--breadcrumbs end-->
@@ -28,33 +28,6 @@
 						</a>
 						<h1>Душа моя озарена неземной радостью, как эти чудесные весенние утра, которыми я наслаждаюсь от всего сердца.
 							<span class="mark">(h1)</span></h1>
-						<div class="print-hidden" style="float: right; margin: 0 0 20px 40px; font-size: 13px; line-height: 18px;">
-							<h3>Use color</h3>
-							<div>
-								<div style="width: 70px; height: 18px; float: left; background: #f00;"></div>
-								&nbsp;&ndash;&nbsp;<em>#f00</em>
-								<div style="clear: both;"></div>
-								<div style="width: 70px; height: 18px; float: left; background: #ffa500;"></div>
-								&nbsp;&ndash;&nbsp;<em>#ffa500</em>
-								<div style="clear: both;"></div>
-								<div style="width: 70px; height: 18px; float: left; background: #ff0;"></div>
-								&nbsp;&ndash;&nbsp;<em>#ff0</em>
-								<div style="clear: both;"></div>
-								<div style="width: 70px; height: 18px; float: left; background: #008000;"></div>
-								&nbsp;&ndash;&nbsp;<em>#008000</em>
-								<div style="clear: both;"></div>
-								<div style="width: 70px; height: 18px; float: left; background: #0ff;"></div>
-								&nbsp;&ndash;&nbsp;<em>#0ff</em>
-								<div style="clear: both;"></div>
-								<div style="width: 70px; height: 18px; float: left; background: #00f;"></div>
-								&nbsp;&ndash;&nbsp;<em>#00f</em>
-								<div style="clear: both;"></div>
-								<div style="width: 70px; height: 18px; float: left; background: #ee82ee;"></div>
-								&nbsp;&ndash;&nbsp;<em>#ee82ee</em>
-								<div style="clear: both;"></div>
-								<br />
-							</div>
-						</div>
 						<p>Душа моя озарена неземной радостью, как эти чудесные весенние утра, которыми я наслаждаюсь от всего сердца. Я совсем один и блаженствую в здешнем краю, словно созданном для таких, как я. Я так счастлив, мой друг, так упоен ощущением покоя, что искусство мое страдает от этого.</p>
 						<p>Когда от милой моей долины поднимается пар и полдневное солнце стоит над непроницаемой чащей темного леса и лишь редкий луч проскальзывает в его святая святых, а я лежу в высокой траве у быстрого ручья и, прильнув к земле, вижу тысячи всевозможных былинок и чувствую, как близок моему сердцу крошечный мирок, что снует между стебельками, наблюдаю эти неисчислимые, непостижимые разновидности червяков и мошек и чувствую близость всемогущего, создавшего нас по своему подобию, веяние вселюбящего, судившего нам парить в вечном блаженстве, когда взор мой туманится и все вокруг меня и небо надо мной запечатлены в моей душе, точно образ возлюбленной, - тогда, дорогой друг, меня часто томит мысль: "Ах!</p>
 						<hr>
