--- a/src/index.html
+++ b/src/index.html
@@ -37,194 +37,120 @@
 					<!--logo-->
 					<strong class="logo"><a href="index.html">Project Name</a><img style="display: none;" src="img/logo.png" alt="Project Name"></strong>
 					<!--logo end-->
-					<!--main navigation-->
-					<div class="main-nav">
-						<nav class="nav">
-							<ul class="nav__list">
-								<li class="has-drop">
-									<a href="about.html"><span>About</span></a>
-									<div class="nav__drop js-nav-drop">
-										<ul class="sub1-nav__list">
-											<li><a href="#"><span>Item 1.1</span></a></li>
-											<li class="has-drop">
-												<a href="#" class="selected"><span>Item 1.2</span><i class="nav__angle"></i></a>
-												<div class="sub1-nav__drop js-nav-drop">
-													<ul class="sub2-nav__list">
-														<li class="has-drop">
-															<a href="#" class="selected"><span>Item 1.2.1</span><i class="nav__angle"></i></a>
-															<div class="sub2-nav__drop js-nav-drop">
-																<ul class="sub3-nav__list">
-																	<li><a href="#"><span>Item 1.2.1.1</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.2</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.3</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.4</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.5</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.6</span></a></li>
-																</ul>
-															</div>
-														</li>
-														<li><a href="#"><span>Item 1.2.2</span></a></li>
-														<li><a href="#"><span>Item 1.2.3</span></a></li>
-														<li><a href="#"><span>Item 1.2.4</span></a> </li>
-													</ul>
-												</div>
-											</li>
-											<li><a href="#"><span>Item 1.3</span></a></li>
-											<li><a href="#"><span>Item 1.4</span></a></li>
-											<li><a href="#"><span>Item 1.5</span></a></li>
-											<li><a href="#"><span>Item 1.6</span></a></li>
-											<li><a href="#"><span>Item 1.7</span></a></li>
-										</ul>
-									</div>
-								</li>
-								<li class="has-drop">
-									<a href="news.html"><span>News</span></a>
-									<div class="nav__drop js-nav-drop">
-										<ul class="sub1-nav__list">
-											<li><a href="#"><span>Item 1.1</span></a></li>
-											<li class="has-drop">
-												<a href="#" class="selected"><span>Item 1.2</span><i class="nav__angle"></i></a>
-												<div class="sub1-nav__drop js-nav-drop">
-													<ul class="sub2-nav__list">
-														<li class="has-drop">
-															<a href="#" class="selected"><span>Item 1.2.1</span><i class="nav__angle"></i></a>
-															<div class="sub2-nav__drop js-nav-drop">
-																<ul class="sub3-nav__list">
-																	<li><a href="#"><span>Item 1.2.1.1</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.2</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.3</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.4</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.5</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.6</span></a></li>
-																</ul>
-															</div>
-														</li>
-														<li><a href="#"><span>Item 1.2.2</span></a></li>
-														<li><a href="#"><span>Item 1.2.3</span></a></li>
-														<li><a href="#"><span>Item 1.2.4</span></a> </li>
-													</ul>
-												</div>
-											</li>
-											<li><a href="#"><span>Item 1.3</span></a></li>
-											<li><a href="#"><span>Item 1.4</span></a></li>
-											<li><a href="#"><span>Item 1.5</span></a></li>
-											<li><a href="#"><span>Item 1.6</span></a></li>
-											<li><a href="#"><span>Item 1.7</span></a></li>
-										</ul>
-									</div>
-								</li>
-								<li class="has-drop">
-									<a href="contact.html"><span>Contact</span></a>
-									<div class="nav__drop js-nav-drop">
-										<ul class="sub1-nav__list">
-											<li><a href="#"><span>Item 1.1</span></a></li>
-											<li class="has-drop">
-												<a href="#" class="selected"><span>Item 1.2</span><i class="nav__angle"></i></a>
-												<div class="sub1-nav__drop js-nav-drop">
-													<ul class="sub2-nav__list">
-														<li class="has-drop">
-															<a href="#" class="selected"><span>Item 1.2.1</span><i class="nav__angle"></i></a>
-															<div class="sub2-nav__drop js-nav-drop">
-																<ul class="sub3-nav__list">
-																	<li><a href="#"><span>Item 1.2.1.1</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.2</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.3</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.4</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.5</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.6</span></a></li>
-																</ul>
-															</div>
-														</li>
-														<li><a href="#"><span>Item 1.2.2</span></a></li>
-														<li><a href="#"><span>Item 1.2.3</span></a></li>
-														<li><a href="#"><span>Item 1.2.4</span></a> </li>
-													</ul>
-												</div>
-											</li>
-											<li><a href="#"><span>Item 1.3</span></a></li>
-											<li><a href="#"><span>Item 1.4</span></a></li>
-											<li><a href="#"><span>Item 1.5</span></a></li>
-											<li><a href="#"><span>Item 1.6</span></a></li>
-											<li><a href="#"><span>Item 1.7</span></a></li>
-										</ul>
-									</div>
-								</li>
-								<li class="has-drop">
-									<a href="photos.html"><span>Photos</span></a>
-									<div class="nav__drop js-nav-drop">
-										<ul class="sub1-nav__list">
-											<li><a href="#"><span>Item 1.1</span></a></li>
-											<li class="has-drop">
-												<a href="#" class="selected"><span>Item 1.2</span><i class="nav__angle"></i></a>
-												<div class="sub1-nav__drop js-nav-drop">
-													<ul class="sub2-nav__list">
-														<li class="has-drop">
-															<a href="#" class="selected"><span>Item 1.2.1</span><i class="nav__angle"></i></a>
-															<div class="sub2-nav__drop js-nav-drop">
-																<ul class="sub3-nav__list">
-																	<li><a href="#"><span>Item 1.2.1.1</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.2</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.3</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.4</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.5</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.6</span></a></li>
-																</ul>
-															</div>
-														</li>
-														<li><a href="#"><span>Item 1.2.2</span></a></li>
-														<li><a href="#"><span>Item 1.2.3</span></a></li>
-														<li><a href="#"><span>Item 1.2.4</span></a> </li>
-													</ul>
-												</div>
-											</li>
-											<li><a href="#"><span>Item 1.3</span></a></li>
-											<li><a href="#"><span>Item 1.4</span></a></li>
-											<li><a href="#"><span>Item 1.5</span></a></li>
-											<li><a href="#"><span>Item 1.6</span></a></li>
-											<li><a href="#"><span>Item 1.7</span></a></li>
-										</ul>
-									</div>
-								</li>
-								<li class="has-drop">
-									<a href="faq.html"><span>FAQ</span></a>
-									<div class="nav__drop js-nav-drop">
-										<ul class="sub1-nav__list">
-											<li><a href="#"><span>Item 1.1</span></a></li>
-											<li class="has-drop">
-												<a href="#" class="selected"><span>Item 1.2</span><i class="nav__angle"></i></a>
-												<div class="sub1-nav__drop js-nav-drop">
-													<ul class="sub2-nav__list">
-														<li class="has-drop">
-															<a href="#" class="selected"><span>Item 1.2.1</span><i class="nav__angle"></i></a>
-															<div class="sub2-nav__drop js-nav-drop">
-																<ul class="sub3-nav__list">
-																	<li><a href="#"><span>Item 1.2.1.1</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.2</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.3</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.4</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.5</span></a></li>
-																	<li><a href="#"><span>Item 1.2.1.6</span></a></li>
-																</ul>
-															</div>
-														</li>
-														<li><a href="#"><span>Item 1.2.2</span></a></li>
-														<li><a href="#"><span>Item 1.2.3</span></a></li>
-														<li><a href="#"><span>Item 1.2.4</span></a> </li>
-													</ul>
-												</div>
-											</li>
-											<li><a href="#"><span>Item 1.3</span></a></li>
-											<li><a href="#"><span>Item 1.4</span></a></li>
-											<li><a href="#"><span>Item 1.5</span></a></li>
-											<li><a href="#"><span>Item 1.6</span></a></li>
-											<li><a href="#"><span>Item 1.7</span></a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
-					</div>
-					<!--main navigation end-->
+					<!--navigation-->
+					<!--  -->
+					<!--  -->
+					<nav class="nav">
+						<ul class="nav__list">
+							<li class="has-drop">
+								<a href="index.html"><span>Главная</span></a>
+								<!--(1) START sub-menu FIRST level-->
+								<div class="nav__drop">
+									<ul class="sub1-nav__list">
+										<li><a href="#"><span>Гидродинамический удар</span></a></li>
+										<li><a href="#"><span>Гамма-квант индуцирует погранслой</span></a></li>
+									</ul>
+								</div>
+								<!--(1) END sub-menu FIRST level-->
+							</li>
+							<li class="has-drop">
+								<a href="typography.html"><span>Типографика</span></a>
+								<!--(1) START sub-menu FIRST level-->
+								<div class="nav__drop">
+									<ul class="sub1-nav__list">
+										<li class="has-drop"><a href="#"><span>Самосогласованная модель предсказывает, что при определенных условиях турбулентность трансформирует лептон</span></a>
+											<!--(2) START sub-menu SECOND level-->
+											<div class="nav__drop sub1-nav__drop">
+												<ul class="sub2-nav__list">
+													<li><a href="#"><span>Туманность искажает лептон</span></a></li>
+													<li><a href="#"><span>Разрыв устойчив в магнитном поле</span></a></li>
+													<li><a href="#"><span>Эксимер</span></a></li>
+												</ul>
+											</div>
+											<!--(2) END sub-menu SECOND level-->
+										</li>
+										<li class="has-drop"><a href="#"><span>Вихрь мгновенно выталкивает фонон</span></a>
+											<!--(2) START sub-menu SECOND level-->
+											<div class="nav__drop sub1-nav__drop">
+												<ul class="sub2-nav__list">
+													<li><a href="#"><span>Гравитирующая сфера</span></a></li>
+													<li><a href="#"><span>Вещество изотропно трансформирует короткоживущий магнит</span></a></li>
+													<li><a href="#"><span>Вещество однородно сжимает резонатор</span></a></li>
+												</ul>
+											</div>
+											<!--(2) END sub-menu SECOND level-->
+										</li>
+										<li class="has-drop"><a href="#"><span>Течение среды стабильно</span></a>
+											<!--(2) START sub-menu SECOND level-->
+											<div class="nav__drop sub1-nav__drop">
+												<ul class="sub2-nav__list">
+													<li><a href="#"><span>Плазма трансформирует фронт</span></a></li>
+													<li><a href="#"><span>Туманность выталкивает объект</span></a></li>
+												</ul>
+											</div>
+											<!--(2) END sub-menu SECOND level-->
+										</li>
+										<li class="has-drop"><a href="#"><span>Молекула теоретически возможна</span></a>
+											<!--(2) START sub-menu SECOND level-->
+											<div class="nav__drop sub1-nav__drop">
+												<ul class="sub2-nav__list">
+													<li><a href="#"><span>Галактика синхронизует фронт</span></a></li>
+													<li><a href="#"><span>Фронт индуцирует спиральный объект</span></a></li>
+													<li><a href="#"><span>Плазменное образование активно</span></a></li>
+												</ul>
+											</div>
+											<!--(2) END sub-menu SECOND level-->
+										</li>
+										<li><a href="#"><span>Плоскополяризованный квант</span></a></li>
+										<li><a href="#"><span>Турбулентность</span></a></li>
+									</ul>
+								</div>
+								<!--(1) END sub-menu FIRST level-->
+							</li>
+							<li class="">
+								<a href="404.html"><span>О компании</span></a>
+							</li>
+							<li class="">
+								<a href="404.html"><span>Публикации</span></a>
+							</li>
+							<li class="has-drop">
+								<a href="404.html"><span>Технологии</span></a>
+								<!--(1) START sub-menu FIRST level-->
+								<div class="nav__drop">
+									<ul class="sub1-nav__list">
+										<li class="has-drop"><a href="#"><span>Взвесь вертикально индуцирует пульсар</span></a>
+											<!--(2) START sub-menu SECOND level-->
+											<div class="nav__drop sub1-nav__drop">
+												<ul class="sub2-nav__list">
+													<li class="has-drop"><a href="#"><span>Взрыв</span></a>
+														<!--(3) START sub-menu THIRD level-->
+														<div class="nav__drop sub2-nav__drop">
+															<ul class="sub3-nav__list">
+																<li><a href="#"><span>Струя устойчиво сжимает солитон</span></a></li>
+																<li><a href="#"><span>Силовое поле</span></a></li>
+															</ul>
+														</div>
+														<!--(3) END sub-menu THIRD level-->
+													</li>
+													<li><a href="#"><span>Туманность</span></a></li>
+												</ul>
+											</div>
+											<!--(2) END sub-menu SECOND level-->
+										</li>
+										<li><a href="#"><span>Галактика </span></a></li>
+									</ul>
+								</div>
+								<!--(1) END sub-menu FIRST level-->
+							</li>
+							<li class="">
+								<a href="404.html"><span>Ссылки</span></a>
+							</li>
+							<li class="">
+								<a href="404.html"><span>Контакты</span></a>
+							</li>
+						</ul>
+					</nav>
+					<!--navigation end-->
 				</div>
 			</div>
 		</header>
@@ -235,13 +161,13 @@
 				<div class="main__holder">
 					<!--CONTENT-->
 					<div class="content-wrap">
-						<div class="content">
+						<div class="content user-content">
 							<!--breadcrumbs-->
 							<div class="breadcrumbs">
 								<ul class="breadcrumbs__list">
-									<li><a href="#">Главная</a></li>
-									<li><a href="#">Категории</a></li>
-									<li>Подкатегории</li>
+									<li><a href="#"><span>Главная</span></a></li>
+									<li><a href="#"><span>Категории</span></a></li>
+									<li><span>Жидкость однородно синхронизует кристалл вне зависимости от предсказаний самосогласованной теоретической модели явления</span></li>
 								</ul>
 							</div>
 							<!--breadcrumbs end-->
@@ -296,26 +222,17 @@
 	<footer class="footer">
 		<div class="layout">
 			<div class="footer__holder">
-				<!--footer common-->
-				<div class="footer-common">
-					Content of Footer
-				</div>
-				<!--footer common end-->
-
 				<!--footer bottom-->
 				<div class="footer-bottom">
 					<div class="footer-bottom__holder">
 						<div class="footer-bottom__col">
-							<div class="copyright">Copyright &copy; 2017 Project</div>
-						</div>
-						<div class="footer-bottom__col">
-							<a href="#">Правила использования материалов</a>
+							<span class="copyright">&copy; <a href="index.html">Project</a> 2017</span>
 						</div>
 						<div class="footer-bottom__col">
 							<!--developer-->
 							<div class="developer">
 								<a href="http://astronim.by/">
-									<span class="developer__label">Сделано командой &mdash;</span>
+									<span class="developer__label">Разработка сайта —</span>
 									<span class="developer__logo">Astronim*Support</span>
 								</a>
 							</div>
