--- a/src/__index.html
+++ b/src/__index.html
@@ -19,9 +19,9 @@
 						@@include('_breadcrumbs.tpl')
 						<!--breadcrumbs end-->
 						<section class="section">
-							<div class="section__title"><h2>Title of Section</h2></div>
+							<div class="section__title"><h2>Заголовок секции</h2></div>
 							<div class="section__holder">
-								Content of Section
+								Контент секции
 							</div>
 						</section>
 					</div>
