--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html lang="ru">
+<!--[if lt IE 9]>      <html class="no-js old-ie" lang="ru"> <![endif]-->
+<!--[if IE 9]>         <html class="no-js ie9" lang="ru"> <![endif]-->
+<!--[if gt IE 9]><!-->
+<html class="no-js" lang="ru">
+<!--<![endif]-->
 
 <head>
 	<meta charset="UTF-8">
 	<title>Главная</title>
 	<!--Mobile optimized-->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<!--Theme color-->
 	<meta name="theme-color" content="#fff">
+	<!--SEO-->
+	<meta name="description" content="">
+	<meta name="keywords" content="">
+	<meta name="yandex-verification" content="">
+	<meta name="google-site-verification" content="">
 	<!--The Open Graph protocol-->
-	<meta property="og:url" content="http://localhost:3000/">
-	<meta property="og:title" content="Name">
+	<meta property="og:type" content="website">
+	<meta property="og:locale" content="ru_RU">
+	<meta property="og:url" content="http://localhost:3000/index.html">
+	<meta property="og:title" content="Название">
 	<meta property="og:image" content="http://localhost:3000/img/logo.png">
 	<meta property="og:description" content="Описание">
-	<meta property="og:site_name" content="http://localhost:3000/">
+	<meta property="og:site_name" content="Расширенное название">
 	<!--Favicon-->
-	<link href="favicon.ico" rel="shortcut icon">
+	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="icon" sizes="16x16 32x32 64x64" href="favicon.ico">
 	<link rel="apple-touch-icon" href="apple-touch-icon.png">
 	<!--Style-->
 	<link rel="stylesheet" href="css/libs.min.css">
@@ -173,10 +184,10 @@
 							<!--breadcrumbs end-->
 							<section class="section">
 								<div class="section__title">
-									<h2>Title of Section</h2>
+									<h2>Заголовок секции</h2>
 								</div>
 								<div class="section__holder">
-									Content of Section
+									Контент секции
 								</div>
 							</section>
 						</div>
@@ -187,12 +198,12 @@
 					<aside class="sidebar">
 						<div class="sidebar__holder">
 							<div class="sidebar__widget">
-								<h3>Title of Sidebar Widget</h3>
-								Content of Sidebar Widget
+								<h3>Заголовок виджета</h3>
+								<p>Контент виджета</p>
 							</div>
 							<div class="sidebar__widget">
-								<h3>Title of Sidebar Widget</h3>
-								Content of Sidebar Widget
+								<h3>Заголовок виджета</h3>
+								<p>Контент виджета</p>
 							</div>
 						</div>
 					</aside>
@@ -202,12 +213,12 @@
 					<aside class="aside">
 						<div class="aside__holder">
 							<div class="aside__widget">
-								<h3>Title of Aside Widget</h3>
-								Content of Aside Widget
+								<h3>Заголовок виджета</h3>
+								<p>Контент виджета</p>
 							</div>
 							<div class="aside__widget">
-								<h3>Title of Aside Widget</h3>
-								Content of Aside Widget
+								<h3>Заголовок виджета</h3>
+								<p>Контент виджета</p>
 							</div>
 						</div>
 					</aside>
