--- a/src/__index.html
+++ b/src/__index.html
@@ -10,7 +10,7 @@
 	<!--HEADER end-->
 	<!--MAIN-->
 	<div class="main">
-		<div class="layout">
+		<div class="max-wrap layout">
 			<div class="main__holder">
 				<!--CONTENT-->
 				<div class="content-wrap">
