--- a/src/__test-mixins.html
+++ b/src/__test-mixins.html
@@ -11,12 +11,12 @@
 	<!--HEADER end-->
 	<!--MAIN-->
 	<div class="main">
-		<div class="layout">
+		<div class="max-wrap layout">
 			<div class="main__holder">
 				<!--CONTENT-->
 				<div class="content-wrap">
 					<div class="content user-content">
-						<div class="text-layout">
+						<div class="layout-text">
 							<h1>Тестирование примесей</h1>
 							<section class="section">
 								<div class="section__title"><h3>object-fit()</h3></div>
@@ -133,12 +133,25 @@
 								</div>
 							</section>
 							<section class="section">
-								<div class="section__title"><h3>mathsass</h3></div>
+								<div class="section__title"><h3>mathsass()</h3></div>
 								<div class="section__holder">
 									<div class="section__box">
-										<div class="section__subtitle"><h4>triangle(top)</h4></div>
+										<div class="section__subtitle"><h4>rotate(rad-to-deg(atan(1)))</h4></div>
 										<div class="mx-element mx-mathsass">
 											<div class="mx-inner mx-mathsass__inner">rotate(rad-to-deg(atan(1)))</div>
+										</div>
+									</div>
+								</div>
+							</section>
+							<section class="section">
+								<div class="section__title"><h3>font()</h3></div>
+								<div class="section__holder">
+									<div class="section__box">
+										<div class="section__subtitle"><h4>font()</h4></div>
+										<div class="mx-element mx-font">
+											<p class="mx-font--01">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque incidunt nobis omnis rem sunt. Aspernatur dolore et neque saepe voluptates.</p>
+											<p class="mx-font--02">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque incidunt nobis omnis rem sunt. Aspernatur dolore et neque saepe voluptates.</p>
+											<p class="mx-font--03">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque incidunt nobis omnis rem sunt. Aspernatur dolore et neque saepe voluptates.</p>
 										</div>
 									</div>
 								</div>
