--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
 	<div class="wrapper">
 		<!--HEADER-->
 		<header class="header">
-			<div class="layout">
+			<div class="max-wrap layout">
 				<div class="header__holder">
 					<!--logo-->
 					<strong class="logo"><a href="index.html">Project Name</a><img style="display: none;" src="img/logo.png" alt="Project Name"></strong>
@@ -168,7 +168,7 @@
 		<!--HEADER end-->
 		<!--MAIN-->
 		<div class="main">
-			<div class="layout">
+			<div class="max-wrap layout">
 				<div class="main__holder">
 					<!--CONTENT-->
 					<div class="content-wrap">
@@ -231,7 +231,7 @@
 	<!-- >>> foot.tpl <<< -->
 	<!--footer-->
 	<footer class="footer">
-		<div class="layout">
+		<div class="max-wrap layout">
 			<div class="footer__holder">
 				<!--footer bottom-->
 				<div class="footer-bottom">
