--- a/src/test-mixins.html
+++ b/src/test-mixins.html
@@ -44,7 +44,7 @@
 	<div class="wrapper">
 		<!--HEADER-->
 		<header class="header">
-			<div class="layout">
+			<div class="max-wrap layout">
 				<div class="header__holder">
 					<!--logo-->
 					<strong class="logo"><a href="index.html">Project Name</a><img style="display: none;" src="img/logo.png" alt="Project Name"></strong>
@@ -169,12 +169,12 @@
 		<!--HEADER end-->
 		<!--MAIN-->
 		<div class="main">
-			<div class="layout">
+			<div class="max-wrap layout">
 				<div class="main__holder">
 					<!--CONTENT-->
 					<div class="content-wrap">
 						<div class="content user-content">
-							<div class="text-layout">
+							<div class="layout-text">
 								<h1>Тестирование примесей</h1>
 								<section class="section">
 									<div class="section__title">
@@ -332,15 +332,32 @@
 								</section>
 								<section class="section">
 									<div class="section__title">
-										<h3>mathsass</h3>
+										<h3>mathsass()</h3>
 									</div>
 									<div class="section__holder">
 										<div class="section__box">
 											<div class="section__subtitle">
-												<h4>triangle(top)</h4>
+												<h4>rotate(rad-to-deg(atan(1)))</h4>
 											</div>
 											<div class="mx-element mx-mathsass">
 												<div class="mx-inner mx-mathsass__inner">rotate(rad-to-deg(atan(1)))</div>
+											</div>
+										</div>
+									</div>
+								</section>
+								<section class="section">
+									<div class="section__title">
+										<h3>font()</h3>
+									</div>
+									<div class="section__holder">
+										<div class="section__box">
+											<div class="section__subtitle">
+												<h4>font()</h4>
+											</div>
+											<div class="mx-element mx-font">
+												<p class="mx-font--01">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque incidunt nobis omnis rem sunt. Aspernatur dolore et neque saepe voluptates.</p>
+												<p class="mx-font--02">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque incidunt nobis omnis rem sunt. Aspernatur dolore et neque saepe voluptates.</p>
+												<p class="mx-font--03">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque incidunt nobis omnis rem sunt. Aspernatur dolore et neque saepe voluptates.</p>
 											</div>
 										</div>
 									</div>
@@ -372,7 +389,7 @@
 	<!-- >>> foot.tpl <<< -->
 	<!--footer-->
 	<footer class="footer">
-		<div class="layout">
+		<div class="max-wrap layout">
 			<div class="footer__holder">
 				<!--footer bottom-->
 				<div class="footer-bottom">
