--- a/src/__index.html
+++ b/src/__index.html
@@ -5,7 +5,7 @@
 <div class="wrapper">
 	<!--HEADER-->
 	@@include('_header.tpl', {
-		"mainNavItemActive": "index"
+		"mainNavItemActive": "Главная"
 	})
 	<!--HEADER end-->
 	<!--MAIN-->
