--- a/src/__test-mixins.html
+++ b/src/__test-mixins.html
@@ -6,7 +6,7 @@
 <div class="wrapper">
 	<!--HEADER-->
 	@@include('_header.tpl', {
-		"mainNavItemActive": "index"
+		"mainNavItemActive": "Тестирование примесей и функций"
 	})
 	<!--HEADER end-->
 	<!--MAIN-->
