--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
 					<!--  -->
 					<nav class="nav">
 						<ul class="nav__list">
-							<li class="has-drop">
+							<li class="has-drop current">
 								<a href="index.html"><span>Главная</span></a>
 								<!--(1) START sub-menu FIRST level-->
 								<div class="nav__drop">
