--- a/src/__typography.html
+++ b/src/__typography.html
@@ -28,9 +28,10 @@
 							<span>Версия для печати</span>
 						</a>
 
-						<div class="layout-text">
+						<div class="layout-flood">
 							<h1>Душа моя озарена неземной радостью, как эти чудесные весенние утра, которыми я наслаждаюсь от всего сердца.
-								<span class="mark">(h1)</span></h1>
+								<span class="mark">(h1)</span></h1></div>
+						<div class="layout-text">
 							<p>Душа моя озарена неземной радостью, как эти чудесные весенние утра, которыми я наслаждаюсь от всего сердца. Я совсем один и блаженствую в здешнем краю, словно созданном для таких, как я. Я так счастлив, мой друг, так упоен ощущением покоя, что искусство мое страдает от этого.</p>
 							<p>Когда от милой моей долины поднимается пар и полдневное солнце стоит над непроницаемой чащей темного леса и лишь редкий луч проскальзывает в его святая святых, а я лежу в высокой траве у быстрого ручья и, прильнув к земле, вижу тысячи всевозможных былинок и чувствую, как близок моему сердцу крошечный мирок, что снует между стебельками, наблюдаю эти неисчислимые, непостижимые разновидности червяков и мошек и чувствую близость всемогущего, создавшего нас по своему подобию, веяние вселюбящего, судившего нам парить в вечном блаженстве, когда взор мой туманится и все вокруг меня и небо надо мной запечатлены в моей душе, точно образ возлюбленной, - тогда, дорогой друг, меня часто томит мысль: "Ах!</p>
 							<hr>
@@ -509,92 +510,73 @@
 						</div>
 
 						<div class="layout-text">
+							<h3>Пример страницы поиска</h3>
 							<form action="" method="get">
-								<input type="text" name="q" value="мотульский" size="40"> &nbsp;<input type="submit" value="Искать">
+								<input type="text" name="q" value="поиск" size="40">&nbsp;<input type="submit" value="Искать">
 								<input type="hidden" name="how" value="r">
 							</form>
 							<br>
-
-
 							<div class="search-page">
 								<div class="pagination-wrap">
-
-									<div class="p-nav-title">
-										Результаты поиска
-									</div>
-
-
+									<div class="p-nav-title">Результаты поиска</div>
 									<div class="pagination">
-
 										<a href="#" class="p-nav p-prev disabled">
 											<i class="icon icon-angle-left"></i>
 											<span>Пред.</span>
 										</a>
-
-										<a href="#" class="p-nav p-next disabled">
+										<a href="#" class="p-nav p-next">
 											<span>След.</span>
 											<i class="icon icon-angle-right"></i>
 										</a>
-
 										<ul>
 											<li><a class="active" href="#"><span>1</span></a></li>
+											<li><a href="#"><span>2</span></a></li>
+											<li><a href="#"><span>3</span></a></li>
+											<li><a href="#"><span>...</span></a></li>
+											<li><a href="#"><span>10</span></a></li>
 										</ul>
-
-
 									</div>
 								</div>
 								<br>
 								<hr>
-
-								<a href="/motulsky/detail.php?ID=156731&amp;sphrase_id=8">Медали</a>
-								<p> ... «Институту пограничной службы 20 лет» (2013) (
-									удостоверение
-									)
-									Медаль «Маршал Жуков» II степени директору Национальной библиотеки Беларуси Р.С. <b>Мотульскому</b> (2012) (
-									удостоверение
-									)
-									Юбилейная медаль «Николай Петрович Румянцев – основатель Российской государственной библиотеки» (2011) ... </p>
+								<a href="404.html">Медали</a>
+								<p> ... «Институту пограничной службы 20 лет» (2013) ( удостоверение ) Медаль «Маршал Жуков» II степени директору Национальной библиотеки Беларуси Р.С.
+									<b>Мотульскому</b> (2012) ( удостоверение ) Юбилейная медаль «Николай Петрович Румянцев – основатель Российской государственной библиотеки» (2011) ...
+								</p>
 								<small>Изменен: 22.03.2017</small>
 								<br>
-								<small>Путь:&nbsp;<a href="/">Главная</a></small>
+								<small>Путь:&nbsp;<a href="404.html">Главная</a></small>
 								<hr>
-								<a href="/trudy/1699/?ELEMENT_ID=156876&amp;sphrase_id=8">Методические материалы</a>
-								<p> ... навучання / Беларускі універсітэт культуры. – Мінск, 1997. – С. 121–126.
-									Организация, экономика и управление библиотечным делом / Т. И. Чаплыгина, Р. С. <b>Мотульский</b>, Т. В. Шабельник // Зборнiк метадычных указанняў для студэнтаў 5 курса аддзялення бiблiятэказнаўства i бiблiяграфii факультэта завочнага ... </p>
+								<a href="404.html">Методические материалы</a>
+								<p> ... навучання / Беларускі універсітэт культуры. – Мінск, 1997. – С. 121–126. Организация, экономика и управление библиотечным делом / Т. И. Чаплыгина, Р. С.
+									<b>Мотульский</b>, Т. В. Шабельник // Зборнiк метадычных указанняў для студэнтаў 5 курса аддзялення бiблiятэказнаўства i бiблiяграфii факультэта завочнага ...
+								</p>
 								<small>Изменен: 22.03.2017</small>
 								<br>
-								<small>Путь:&nbsp;<a href="/">Главная</a>&nbsp;/&nbsp;<a href="/trudy/">Труды</a></small>
+								<small>Путь:&nbsp;<a href="404.html">Главная</a>&nbsp;/&nbsp;<a href="404.html">Труды</a></small>
 								<hr>
 								<div class="pagination-wrap">
-
-									<div class="p-nav-title">
-										Результаты поиска
-									</div>
-
-
+									<div class="p-nav-title">Результаты поиска</div>
 									<div class="pagination">
-
 										<a href="#" class="p-nav p-prev disabled">
 											<i class="icon icon-angle-left"></i>
 											<span>Пред.</span>
 										</a>
-
-										<a href="#" class="p-nav p-next disabled">
+										<a href="#" class="p-nav p-next">
 											<span>След.</span>
 											<i class="icon icon-angle-right"></i>
 										</a>
-
 										<ul>
 											<li><a class="active" href="#"><span>1</span></a></li>
+											<li><a href="#"><span>2</span></a></li>
+											<li><a href="#"><span>3</span></a></li>
+											<li><span>...</span></li>
+											<li><a href="#"><span>10</span></a></li>
 										</ul>
-
-
 									</div>
 								</div>
 								<br>
-								<p>
-									<b>Отсортировано по релевантности</b>&nbsp;|&nbsp;<a href="/search/?q=%D0%BC%D0%BE%D1%82%D1%83%D0%BB%D1%8C%D1%81%D0%BA%D0%B8%D0%B9&amp;where=&amp;how=d">Сортировать по дате</a>
-								</p>
+								<p><b>Отсортировано по релевантности</b>&nbsp;|&nbsp;<a href="#">Сортировать по дате</a></p>
 							</div>
 						</div>
 					</div>
