--- a/src/__typography.html
+++ b/src/__typography.html
@@ -193,7 +193,7 @@
 											<td>Компания производит продукции</td>
 											<td>13%</td>
 											<td>23233</td>
-											<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</td>
+											<td>Душа моя озарена неземной радостью, как эти чудесные весенние утра</td>
 											<td>читабельной</td>
 										</tr>
 										<tr>
@@ -264,7 +264,7 @@
 											<td>Компания производит продукции</td>
 											<td>13%</td>
 											<td>23233</td>
-											<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</td>
+											<td>Душа моя озарена неземной радостью, как эти чудесные весенние утра</td>
 											<td>читабельной</td>
 										</tr>
 										<tr>
