--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="ru">
 <!--[if lt IE 9]>      <html class="no-js old-ie" lang="ru"> <![endif]-->
 <!--[if IE 9]>         <html class="no-js ie9" lang="ru"> <![endif]-->
 <!--[if gt IE 9]><!-->
@@ -10,14 +9,14 @@
 	<meta charset="UTF-8">
 	<title>Главная</title>
 	<!--Mobile optimized-->
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.2">
 	<!--Theme color-->
 	<meta name="theme-color" content="#fff">
 	<!--SEO-->
-	<meta name="description" content="">
-	<meta name="keywords" content="">
-	<meta name="yandex-verification" content="">
-	<meta name="google-site-verification" content="">
+	<meta name="description" content="описание">
+	<meta name="keywords" content="ключевые слова">
+	<meta name="yandex-verification" content="XXXXXXXXXXXXXX">
+	<meta name="google-site-verification" content="XXXXXXXXXXXXXX">
 	<!--The Open Graph protocol-->
 	<meta property="og:type" content="website">
 	<meta property="og:locale" content="ru_RU">
