--- a/src/typography.html
+++ b/src/typography.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="ru">
 <!--[if lt IE 9]>      <html class="no-js old-ie" lang="ru"> <![endif]-->
 <!--[if IE 9]>         <html class="no-js ie9" lang="ru"> <![endif]-->
 <!--[if gt IE 9]><!-->
@@ -10,14 +9,14 @@
 	<meta charset="UTF-8">
 	<title>Типографика</title>
 	<!--Mobile optimized-->
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.2">
 	<!--Theme color-->
 	<meta name="theme-color" content="#fff">
 	<!--SEO-->
-	<meta name="description" content="">
-	<meta name="keywords" content="">
-	<meta name="yandex-verification" content="">
-	<meta name="google-site-verification" content="">
+	<meta name="description" content="описание">
+	<meta name="keywords" content="ключевые слова">
+	<meta name="yandex-verification" content="XXXXXXXXXXXXXX">
+	<meta name="google-site-verification" content="XXXXXXXXXXXXXX">
 	<!--The Open Graph protocol-->
 	<meta property="og:type" content="website">
 	<meta property="og:locale" content="ru_RU">
@@ -188,7 +187,7 @@
 							<!--datetime end-->
 
 							<a href="#" class="view-print">
-								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 295.1 280.4" style="enable-background:new 0 0 295.1 280.4;"> <path d="M218.4,236.1H76.7c-1.5,0-3,1.5-3,3v38.4c0,1.5,1.5,3,3,3h141.7c1.5,0,3-1.5,3-3V239C221.3,237.6,219.9,236.1,218.4,236.1z   M280.4,88.5h-44.3V14.8c0-8.9-5.9-14.8-14.8-14.8H73.8C64.9,0,59,5.9,59,14.8v73.8H14.8C5.9,88.5,0,94.4,0,103.3v162.3  c0,8.9,5.9,14.8,14.8,14.8h29.5v-73.8c0-8.9,5.9-14.8,14.8-14.8h177.1c8.9,0,14.8,5.9,14.8,14.8v73.8h29.5c8.9,0,14.8-5.9,14.8-14.8  V103.3C295.1,94.4,289.2,88.5,280.4,88.5z M191.8,162.3c-8.9,0-14.8-5.9-14.8-14.8s5.9-14.8,14.8-14.8s14.8,5.9,14.8,14.8  S200.7,162.3,191.8,162.3z M206.6,88.5h-118v-59h118V88.5z M243.5,162.3c-11.8,0-22.1-10.3-22.1-22.1s10.3-22.1,22.1-22.1  s22.1,10.3,22.1,22.1S255.3,162.3,243.5,162.3z"/> </svg>
+								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 295.1 280.4" style="enable-background:new 0 0 295.1 280.4;"> <path d="M218.4,236.1H76.7c-1.5,0-3,1.5-3,3v38.4c0,1.5,1.5,3,3,3h141.7c1.5,0,3-1.5,3-3V239C221.3,237.6,219.9,236.1,218.4,236.1z   M280.4,88.5h-44.3V14.8c0-8.9-5.9-14.8-14.8-14.8H73.8C64.9,0,59,5.9,59,14.8v73.8H14.8C5.9,88.5,0,94.4,0,103.3v162.3  c0,8.9,5.9,14.8,14.8,14.8h29.5v-73.8c0-8.9,5.9-14.8,14.8-14.8h177.1c8.9,0,14.8,5.9,14.8,14.8v73.8h29.5c8.9,0,14.8-5.9,14.8-14.8  V103.3C295.1,94.4,289.2,88.5,280.4,88.5z M191.8,162.3c-8.9,0-14.8-5.9-14.8-14.8s5.9-14.8,14.8-14.8s14.8,5.9,14.8,14.8  S200.7,162.3,191.8,162.3z M206.6,88.5h-118v-59h118V88.5z M243.5,162.3c-11.8,0-22.1-10.3-22.1-22.1s10.3-22.1,22.1-22.1  s22.1,10.3,22.1,22.1S255.3,162.3,243.5,162.3z"></path> </svg>
 								<span>Версия для печати</span>
 							</a>
 
@@ -197,8 +196,10 @@
 									<span class="mark">(h1)</span></h1>
 							</div>
 							<div class="layout-text">
-								<p>Душа моя озарена неземной радостью, как эти чудесные весенние утра, которыми я наслаждаюсь от всего сердца. Я совсем один и блаженствую в здешнем краю, словно созданном для таких, как я. Я так счастлив, мой друг, так упоен ощущением покоя, что
-									искусство мое страдает от этого.</p>
+								<div class="user-entry">
+									<p>Душа моя озарена неземной радостью, как эти чудесные весенние утра, которыми я наслаждаюсь от всего сердца. Я совсем один и блаженствую в здешнем краю, словно созданном для таких, как я. Я так счастлив, мой друг, так упоен ощущением покоя, что
+										искусство мое страдает от этого.</p>
+								</div>
 								<p>Когда от милой моей долины поднимается пар и полдневное солнце стоит над непроницаемой чащей темного леса и лишь редкий луч проскальзывает в его святая святых, а я лежу в высокой траве у быстрого ручья и, прильнув к земле, вижу тысячи всевозможных
 									былинок и чувствую, как близок моему сердцу крошечный мирок, что снует между стебельками, наблюдаю эти неисчислимые, непостижимые разновидности червяков и мошек и чувствую близость всемогущего, создавшего нас по своему подобию, веяние вселюбящего,
 									судившего нам парить в вечном блаженстве, когда взор мой туманится и все вокруг меня и небо надо мной запечатлены в моей душе, точно образ возлюбленной, - тогда, дорогой друг, меня часто томит мысль: "Ах!</p>
@@ -362,7 +363,7 @@
 												<td>Компания производит продукции</td>
 												<td>13%</td>
 												<td>23233</td>
-												<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</td>
+												<td>Душа моя озарена неземной радостью, как эти чудесные весенние утра</td>
 												<td>читабельной</td>
 											</tr>
 											<tr>
@@ -434,7 +435,7 @@
 												<td>Компания производит продукции</td>
 												<td>13%</td>
 												<td>23233</td>
-												<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</td>
+												<td>Душа моя озарена неземной радостью, как эти чудесные весенние утра</td>
 												<td>читабельной</td>
 											</tr>
 											<tr>
