--- a/src/__test-mixins.html
+++ b/src/__test-mixins.html
@@ -75,6 +75,23 @@
 								</div>
 							</section>
 							<section class="section">
+								<div class="section__title"><h3>centering()</h3></div>
+								<div class="section__holder">
+									<div class="section__box">
+										<div class="section__subtitle"><h4>centering($width: 200px, $height: 50px, $transform: false)</h4></div>
+										<div class="mx-element mx-centering">
+											<div class="mx-inner mx-centering__inner"></div>
+										</div>
+									</div>
+									<div class="section__box">
+										<div class="section__subtitle"><h4>centering()</h4></div>
+										<div class="mx-element mx-centering mx--default">
+											<div class="mx-inner mx-centering__inner"></div>
+										</div>
+									</div>
+								</div>
+							</section>
+							<section class="section">
 								<div class="section__title"><h3>triangle()</h3></div>
 								<div class="section__holder">
 									<div class="section__box">
