--- a/src/404.html
+++ b/src/404.html
@@ -152,7 +152,7 @@
 								<!--(1) START @@key FIRST level-->
 								<li class="">
 									<div class="nav__tab">
-										<a href="404.html" title="nav - Пункт 2"><span>Пункт 2</span></a>
+										<a href="#" title="nav - Пункт 2"><span>Пункт 2</span></a>
 										<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 									</div>
 								</li>
@@ -160,7 +160,7 @@
 								<!--(1) START @@key FIRST level-->
 								<li class="">
 									<div class="nav__tab">
-										<a href="404.html" title="nav - Пункт 3"><span>Пункт 3</span></a>
+										<a href="#" title="nav - Пункт 3"><span>Пункт 3</span></a>
 										<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 									</div>
 								</li>
